<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@color/pinkish"
    tools:context=".SaveScoreToExternalFile">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/viewScoresFromHighScoreClass"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFileName"
        android:hint="@string/file"
        android:textColorHint="@color/darkPink"
        android:inputType="text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:background="@drawable/btn_play"
        android:text="@string/Save_to_DCIM_here"
        android:textColor="@color/white"
        android:onClick="onSave"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:id="@+id/btnShow"
        android:background="@drawable/btn_high_scores"
        android:textColor="@color/white"
        android:text="@string/show"
        android:onClick="onShow"/>

    <TextView
        android:id="@+id/txtViewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="12sp"
        android:gravity="center"
        android:hint="@string/hintForScore"
        android:textColor="@color/darkPink"
        android:textColorHint="@color/darkPink"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/this_is_DCIM"
        android:gravity="center"
        android:textColor="@color/darkPink"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lstFiles"
        />


</LinearLayout>