<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@color/pinkish"
    tools:context=".HighestScore">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:text=""/>

    <TextView
        android:id="@+id/scoreTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/save_to_storage"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/Save_to_DCIM"
        android:textColor="@color/white"
        android:background="@drawable/btn_play"
        android:onClick="onSaveToNextPage"/>

    <Button
        android:id="@+id/back_to_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/back_to_game"
        android:background="@drawable/btn_high_scores"
        android:textColor="@color/white"
        android:onClick="goToGame"/>

</LinearLayout>